update .env exapmple and readme to ensure cloning and startup success

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# ClassConnect Environment Configuration Example
+# Copy this file to .env in the project root directory
+# Then copy the appropriate sections to backend/.env and frontend/.env
+
+# ===== BACKEND CONFIGURATION =====
+
 # Server settings
 PORT=8080                      # Port for the backend server
 GIN_MODE=debug                 # 'debug' for development, 'release' for production
@@ -13,3 +19,8 @@ DB_INTEGRATED_SECURITY=false   # Set to 'true' to use Windows Authentication ins
 # JWT settings
 JWT_SECRET=your_jwt_secret_key # Secret key for signing JWT tokens (use a strong random string in production)
 JWT_EXPIRATION=24h             # JWT token expiration time (e.g., 24h, 7d)
+
+# ===== FRONTEND CONFIGURATION =====
+
+# API URL for frontend to connect to backend
+VITE_API_URL=http://localhost:8080/api
